 # [#23360] component_view Email to a friend etc. Patch attached (Angie Radtke)
 # [#23352] Text alignment issues at Pre-Installation check screen (Tim Plummer)
 # [#23310] Empty Components Sub-menu Displayed (Michael Babker)
 # [#23333] User information lost if get error message when trying to create (Michael Babker)
 # [#22712] *Port issue when uploading image with image button (Ian MacLennan)

17-Nov-2010 Jean-Marie Simonet
 # Added icon for the new My Profile menu [#23347]
 # [#23363] Menu_Item_Root is not translatable + some strings
 $ Missing string values
 # [#23365] Images can be inserted anymore. Thanks Rouven.
 
17-Nov-2010 Andrew Eddie
 # Fixed issue [#23347] Move profile editing out of com_users and into com_admin
 # Fixed issue [#23110] Any user with create or edit rights to com_user can make a group a superadmin group (Elin Waring).
 # Fixed issue [#23348] Improve scaling architecture for users and groups lists.
 # Fixed issue [#23241] Saving category while validating rules fails (Mark Dexter, Christophe Demko).
 # Fixed issue [#21837] @todo ACL - Disallow creation of Super User & Admin group by non Super User (Michael Babker, Christopher Garvis, Elin Waring).
 # Fixed issue [#23306] "Add New Article" quick icon permissions check (Michael Babker, Elin Waring, Christophe Demko).
 # Fixed issue [#22868] Improving permissions debug (Dennis Hermacki, Andrea Tarr).
  
16-Nov-2010 Christophe Demko
 # Fix the Edit profile permission

16-Nov-2010 Mark Dexter
# [#23328] Unpublished category - Featured - Errors in content and contact component

16-Nov-2010 Jean-Marie Simonet
 $ Deleting redundant strings.
 $ Correcting wrong EOL from [#23184]
 # [#23334] error in sample data. Thanks Dennis.

-------------------- 1.6.0 Beta14 Release [15-Nov-2010] ------------------

15-Nov-2010 Mark Dexter
# Sample data fixes (thanks Elin Waring)
# [#23184] Need to handle content, modules, menu items when a viewing permission level is deleted