@@ -38,6 +38,7 @@ $ -> Language fix or change
  # [#23310] Empty Components Sub-menu Displayed (Michael Babker)
  # [#23333] User information lost if get error message when trying to create (Michael Babker)
  # [#22712] *Port issue when uploading image with image button (Ian MacLennan)
+ # [#23345] Attaching onFireEvent causes plugins to return an extra (empty) result set
 
 17-Nov-2010 Jean-Marie Simonet
  # Added icon for the new My Profile menu [#23347]
